# JobScraper

./: .gitignore  JobSpy_Demo.ipynb  README.md  app.py  config.ini  history_searchs.csv  jobs.csv  pyproject.toml  run_jobspy.py
.github/workflows/: publish-to-pypi.yml
src/jobspy/jobs/: __init__.py
src/jobspy/scrapers/indeed/: __init__.py
src/jobspy/scrapers/linkedin/: __init__.py
src/jobspy/scrapers/ziprecruiter/: __init__.py
static/: main.js  style.css
templates/: index.html
