[tool.poetry]
name = "jobscrape"
version = "0.1.0"
description = "Job scraper for LinkedIn, Indeed & ZipRecruiter"
authors = ["Phu Nguyen <phutom0412panda@gmail.com>"]  # Replace with your email
readme = "README.md"

packages = [
    { include = "jobspy", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
tls-client = "^0.2.1"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.0"
pydantic = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
